plugins {
	id 'java'
	// ShadowJar
	// https://mvnrepository.com/artifact/com.gradleup.shadow/shadow-gradle-plugin
	id 'com.gradleup.shadow' version '8.3.5'
}

// Getting version
apply from: 'version.gradle'

def version = loadVersion().getVersion()
def mainClassName = 'dev.fileeditor.votl.Main'

repositories {
	// Use Maven Central for resolving dependencies
	mavenCentral()
}

dependencies {
	// JDA library and additions
	// https://mvnrepository.com/artifact/net.dv8tion/JDA
	implementation('net.dv8tion:JDA:5.2.2') {						// JDA library
		exclude module: 'opus-java'
	}
	// https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
	implementation 'ch.qos.logback:logback-classic:1.5.15'			// Logging (required by JDA)

	// Tools
	// https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path
	implementation 'com.jayway.jsonpath:json-path:2.9.0'			// json path-er
	// https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
	implementation 'org.xerial:sqlite-jdbc:3.47.1.0'				// sqlite database
	// https://mvnrepository.com/artifact/org.jsoup/jsoup
	implementation 'org.jsoup:jsoup:1.18.3'							// HTML tools
	// https://mvnrepository.com/artifact/io.github.java-diff-utils/java-diff-utils
	implementation 'io.github.java-diff-utils:java-diff-utils:4.15'	// Diff finder
	// https://mvnrepository.com/artifact/org.json/json
	implementation 'org.json:json:20240303'							// JsonObject

	// Eval
	// https://mvnrepository.com/artifact/org.apache.groovy/groovy
	implementation 'org.apache.groovy:groovy:4.0.24'				// Groovy - code evaluation
}

java {
	sourceCompatibility = targetCompatibility = JavaVersion.VERSION_21
}

// jar's Manifest
jar {
	manifest {
		attributes 'Implementation-Title': 'VOTL Bot',
				   'Implementation-Version': version,
				   'Implementation-Vendor': 'FiLe group',
				   'Main-Class': mainClassName
	}
}

// ShadowJar
shadowJar {
	archiveBaseName.set('VOTL')
	archiveVersion.set(version)
	archiveClassifier.set('')
}

compileJava.options.encoding = 'UTF-8'
